--- a/Web/index2.html
+++ b/Web/index2.html
@@ -11,11 +11,11 @@
     <div class="wrapper">
         <!-- Navigation Bar -->
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-            <a href="../index2.html" rel="noopener noreferrer" target="_blank">Home</a>
+            <li><a href="../index2.html" rel="noopener noreferrer" target="_blank">Home</a></li>
             <a href="https://public.tableau.com/app/profile/erik.svoboda/viz/EmployeeAttrition_16528352408970/FinalProject?publish=yes" rel="noopener noreferrer" target="_blank">Tableau Visualization</a>
-            <a href="../index3.html" rel="noopener noreferrer" target="_blank">Machine Learning</a>
+            <li><a href="../index3.html" rel="noopener noreferrer" target="_blank">Machine Learning</a></li>
             <a href="https://github.com/lykkelig/Group6_Final_Project" rel="noopener noreferrer" target="_blank">Github</a>
-            <a href="../index.html" rel="noopener noreferrer" target="_blank">Group Memebers</a>
+            <li><a href="../index.html" rel="noopener noreferrer" target="_blank">Group Memebers</a></li>
             
             <!--<a href="index.html"><img src="static/images/nasa.jpg" alt="ufo_image_nav" width="45" height="auto"></a>-->
         </nav>
