changed Reily to Reilly in index

--- a/Web/index.html
+++ b/Web/index.html
@@ -48,7 +48,7 @@
                 Ron H
             </div>
             <div class="section five" id="section5">
-                Reily Thompson
+                Reilly Thompson
             </div>
         </body>
 
