changed Reily to Reilly in index

--- a/Web/index.html
+++ b/Web/index.html
@@ -32,7 +32,7 @@
                 <a href="#section2" class="btn">Priya McNamara</a>
                 <a href="#section3" class="btn">MeLea Hetrick</a>
                 <a href="#section4" class="btn">Ron H</a>
-                <a href="#section5" class="btn">Reily Thompson</a>
+                <a href="#section5" class="btn">Reilly Thompson</a>
             </div>
             <div class="section one" id="section1">
                 Erik Svoboda
