--- a/Web/group.html
+++ b/Web/group.html
@@ -37,14 +37,14 @@
             <div class="section one" id="section1">
                 <h2>Erik Svoboda</h2>
                 <p style="text-align:left"> Project Role: <br>
-                - Exploratory data analysis <br>
-                - Tableau  Visualization <br>
-                - HTML Creation</p>
+                    - Exploratory data analysis <br>
+                    - Tableau  Visualization <br>
+                    - HTML Creation</p>
             </div>
             <div class="section two" id="section2">
                 <h2>Priya McNamara</h2>
                 <p style="text-align:left"> Project Role: <br>
-                    - HTML Creation</p>
+                    - HTML</p>
             </div>
             <div class="section three" id="section3">
                 <h2>MeLea Hetrick</h2>
