--- a/Web/machine_learning.html
+++ b/Web/machine_learning.html
@@ -36,18 +36,27 @@
             </div>
             <div class="section one" id="section1">
                 <h2>Logistical Regression</h2>
+                <p style="text-align:left">The training data score was 83% and the test data score was 87%.<br>
+                    The high risk precision is 87%, with a sensitivity precerntage of 100%, and an F1 score of 93%. The low risk precision is showing 0%, with a sensitivity precentage of of 0%, and a F1 score of 0%. </p>
+                <img src="static/machine_learning_images/log_reg/log_reg_trn_tst.png" alt="Train" width="975" height="850" style="float: right; margin-right: 15px;">
+                <img src="static/machine_learning_images/log_reg/log_reg_cm.png" alt="Confusion Matrix" style="float: left; margin-right: 15px;">
+                <img src="static/machine_learning_images/log_reg/log_reg_scores.png" alt="Confusion Matrix" width="750" style="float: left; margin-right: 15px;">
             </div>
             <div class="section two" id="section2">
                 <h2>Random Forest</h2>
+                <img src="static/machine_learning_images/Random_Forest/fr_cm.png" alt="Confusion Matrix" style="float: right; margin-right: 15px;">
             </div>
             <div class="section three" id="section3">
                 <h2>Support Vector Machine</h2>
+                <img src="static/machine_learning_images/Support_Vector_ML/svm_cm.png" alt="Confusion Matrix" style="float: right; margin-right: 15px;">
             </div>
             <div class="section four" id="section4">
                 <h2>XGBoost</h2>
+                <img src="static/machine_learning_images/XGBoost/xgb_cm.png" alt="Confusion Matrix" style="float: right; margin-right: 15px;">
             </div>
             <div class="section five" id="section5">
                 <h2>Naive Bayes</h2>
+                <img src="static/machine_learning_images/Naive_Bayes/nb_cm.png" alt="Confusion Matrix" style="float: right; margin-right: 15px;">
             </div>
         </body>
 
