--- a/Web/home.html
+++ b/Web/home.html
@@ -69,8 +69,20 @@
                     <!-- Article Paragraph -->
                     <div class="col-md-8">
                         <p>
-                            This is where we can put insights based of the ML data.
+                            After evaluating all five machine learning models the Logistical Regression model performed the best. We've identified the following 10 features as having the greatest impact to employee attrition. Features are listed in order of importance:<br>
                         </p>
+                        <ul>
+                            <li>Over Time: Duration of how long the employee has worked at the company</li>
+                            <li>Performance Rating</li>
+                            <li>Traveling Frequently for Business</li>
+                            <li>Job Role: Lab Technition</li>
+                            <li>Marital Status: Single employees were more likely to leave the company</li>
+                            <li>Education Field: Employees with a Technical degree were more likely to leave the company</li>
+                            <li>Job Role: Sales Representitive</li>
+                            <li>Gender: Males were more likely to leave the company</li>
+                            <li>Department: Sales</li>
+                            <li>Education Field: Marketing</li>
+                        </ul>
                     </div>
                 </div>
             <div>
