corrected spelling on Members added second tableau on HTML

--- a/Web/index.html
+++ b/Web/index.html
@@ -12,10 +12,11 @@
         <!-- Navigation Bar -->
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <li><a href="../index2.html" rel="noopener noreferrer" target="_blank">Home</a></li>
-            <a href="https://public.tableau.com/app/profile/erik.svoboda/viz/EmployeeAttrition_16528352408970/FinalProject?publish=yes" rel="noopener noreferrer" target="_blank">Tableau Visualization</a>
+            <a href="https://public.tableau.com/app/profile/erik.svoboda/viz/EmployeeAttrition_16528352408970/FinalProject?publish=yes" rel="noopener noreferrer" target="_blank">Tableau Visualization 1</a>
+            <a href="https://public.tableau.com/app/profile/reilly.thompson/viz/Group6_Final_Tab/Story1?publish=yes" rel="noopener noreferrer" target="_blank">Tableau Visualization 2</a>
             <li><a href="../index3.html" rel="noopener noreferrer" target="_blank">Machine Learning</a></li>
             <a href="https://github.com/lykkelig/Group6_Final_Project" rel="noopener noreferrer" target="_blank">Github</a>
-            <li><a href="../index.html" rel="noopener noreferrer" target="_blank">Group Memebers</a></li>
+            <li><a href="../index.html" rel="noopener noreferrer" target="_blank">Group Members</a></li>
             
             <!--<a href="index.html"><img src="static/images/nasa.jpg" alt="ufo_image_nav" width="45" height="auto"></a>-->
         </nav>
