--- a/Web/home.html
+++ b/Web/home.html
@@ -29,7 +29,7 @@
                 <!-- Article Title -->
                 <div class="col-md-2">
                     <h3>What is Attrition?<br><small>Why is it important?</small></h3>
-                    <a href="index2.html"><img src="static/images/emp_cage.jpeg" alt="employeejar_nav" width="250" height="150"></a>
+                    <a href="index2.html"><img src="static/images/emp_cage.jpeg" alt="employeejar_nav" width="230" height="150"></a>
                 </div>
                 <!-- Article Paragraph -->
                 <div class="col-md-8">
@@ -46,7 +46,7 @@
                 <!-- Article Title -->
                 <div class="col-md-2">
                     <h3>What's the cost?</h3>
-                    <a href="index2.html"><img src="static/images/cost.jpeg" alt="employeejar_nav" width="250" height="150"></a>
+                    <a href="index2.html"><img src="static/images/cost.jpeg" alt="employeejar_nav" width="230" height="150"></a>
                 </div>
                 <!-- Article Paragraph -->
                 <div class="col-md-8">
@@ -69,19 +69,19 @@
                     <!-- Article Paragraph -->
                     <div class="col-md-8">
                         <p>
-                            After evaluating all five machine learning models the Logistical Regression model performed the best. We've identified the following 10 features as having the greatest impact to employee attrition. Features are listed in order of importance:<br>
+                            After evaluating all five machine learning models the Logistical Regression model performed the best with an accuracy of 89.8%. We used hyperparameter tuning on all the models, however this did not change the results in a significant manner. Due to the number of options that can be exercised in hyperparameter tuning we are leaving this open for further research in the future. We've identified the following 10 features as having the greatest impact to employee attrition. Features are listed in order of importance:<br>
                         </p>
                         <ul>
-                            <li>Over Time: Duration of how long the employee has worked at the company</li>
-                            <li>Performance Rating</li>
-                            <li>Traveling Frequently for Business</li>
-                            <li>Job Role: Lab Technition</li>
-                            <li>Marital Status: Single employees were more likely to leave the company</li>
-                            <li>Education Field: Employees with a Technical degree were more likely to leave the company</li>
-                            <li>Job Role: Sales Representitive</li>
-                            <li>Gender: Males were more likely to leave the company</li>
-                            <li>Department: Sales</li>
-                            <li>Education Field: Marketing</li>
+                            <li>Years at Company: Duration of how long the employee has worked at the company</li>
+                            <li>Years Since Last Promotion</li>
+                            <li>Number of Companies Worked</li>
+                            <li>Overtime: Overtime worked (yes)</li>
+                            <li>Distance from home: Miles living from workplace</li>
+                            <li>Business Travel Frequency: How often does an employee travel for work (non-travel, travel frequently, travel rarely)</li>
+                            <li>Job Role: Human Resources</li>
+                            <li>Job Role: Lab Technician</li>
+                            <li>Martial Status: Single (Yes/No)</li>
+                            <li>Education Field: Technical Degree</li>
                         </ul>
                     </div>
                 </div>
