--- a/Web/machine_learning.html
+++ b/Web/machine_learning.html
@@ -11,9 +11,9 @@
     <div class="wrapper">
         <!-- Navigation Bar -->
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-            <li><a href="../index2.html" rel="noopener noreferrer" target="_blank">Home</a></li>
+            <li><a href="../home.html" rel="noopener noreferrer" target="_blank">Home</a></li>
             <a href="https://public.tableau.com/app/profile/erik.svoboda/viz/EmployeeAttrition_16528352408970/FinalProject?publish=yes" rel="noopener noreferrer" target="_blank">Tableau Visualization</a>
-            <li><a href="../index3.html" rel="noopener noreferrer" target="_blank">Machine Learning</a></li>
+            <li><a href="../machine_learning.html" rel="noopener noreferrer" target="_blank">Machine Learning</a></li>
             <a href="https://github.com/lykkelig/Group6_Final_Project" rel="noopener noreferrer" target="_blank">Github</a>
             <li><a href="../group.html" rel="noopener noreferrer" target="_blank">Group Memebers</a></li>
             
@@ -33,30 +33,44 @@
                 <a href="#section3" class="btn">Support Vector Machine</a>
                 <a href="#section4" class="btn">XGBoost</a>
                 <a href="#section5" class="btn">Naive Bayes</a>
+                <a href="#section6" class="btn">Hyperparameter Tuning</a>
             </div>
-            <div class="section one" id="section1">
-                <h2>Logistical Regression</h2>
-                <p style="text-align:left">The training data score was 83% and the test data score was 87%.<br>
-                    The high risk precision is 87%, with a sensitivity precerntage of 100%, and an F1 score of 93%. The low risk precision is showing 0%, with a sensitivity precentage of of 0%, and a F1 score of 0%. </p>
-                <img src="static/machine_learning_images/log_reg/log_reg_trn_tst.png" alt="Train" width="975" height="850" style="float: right; margin-right: 15px;">
-                <img src="static/machine_learning_images/log_reg/log_reg_cm.png" alt="Confusion Matrix" style="float: left; margin-right: 15px;">
-                <img src="static/machine_learning_images/log_reg/log_reg_scores.png" alt="Confusion Matrix" width="750" style="float: left; margin-right: 15px;">
+            <div class="section one" id="section1"><br>
+                <h2 style="text-align:center" >Logistical Regression</h2>
+                <p style="text-align:left">The accuracy score for the Random Forest Classifier model was 89.8%, as shown below.</p>
+                <img src="static/machine_learning_images/log_reg/log_reg_updated.png" alt="Train" width="975" height="850" style="float: left; margin-bottom: 15px; margin-top: 15px;"><br>
+                <img src="static/machine_learning_images/log_reg/log_imbalance_scores.png" alt="Train"  style="float: right; margin-bottom: 15px; margin-top: 15px;"><br>
+                <img src="static/machine_learning_images/log_reg/log_feature_importance.png" alt="Train" width="975" height="850" style="float: center; margin-bottom: 15px; margin-top: 15px;"><br>
             </div>
-            <div class="section two" id="section2">
-                <h2>Random Forest</h2>
-                <img src="static/machine_learning_images/Random_Forest/fr_cm.png" alt="Confusion Matrix" style="float: right; margin-right: 15px;">
+            <div class="section two" id="section2"><br>
+                <h2 style="text-align:center">Random Forest</h2>
+                <p style="text-align:left">The accuracy score for the Random Forest Classifier model was 86.7%, as shown below.</p>
+                <img src="static/machine_learning_images/Random_Forest/RF_cm.png" alt="Confusion Matrix" style="float: center; margin-bottom: 15px; margin-top: 15px;">
+                <img src="static/machine_learning_images/Random_Forest/RF_imbalance_scores.png" alt="Confusion Matrix" style="float: center; margin-bottom: 15px; margin-top: 15px;">
+                <img src="static/machine_learning_images/Random_Forest/RF_top_features.png" alt="Confusion Matrix" style="float: center; margin-bottom: 15px; margin-top: 15px;">
             </div>
-            <div class="section three" id="section3">
+            <div class="section three" id="section3"><br>
                 <h2>Support Vector Machine</h2>
-                <img src="static/machine_learning_images/Support_Vector_ML/svm_cm.png" alt="Confusion Matrix" style="float: right; margin-right: 15px;">
+                <p style="text-align:left">The accuracy score for the Support Vector Machine model was 89.1%, as shown below.</p>
+                <img src="static/machine_learning_images/Support_Vector_ML/SVM_accuracy_CM.png" alt="Confusion Matrix" style="float: center; margin-bottom: 15px; margin-top: 15px;">
+                <img src="static/machine_learning_images/Support_Vector_ML/SVM_imbalanced_scores.png" alt="Confusion Matrix" style="float: center; margin-bottom: 15px; margin-top: 15px;">
+                <img src="static/machine_learning_images/Support_Vector_ML/SVM_top_features.png" alt="Confusion Matrix" style="float: center; margin-bottom: 15px; margin-top: 15px;">
             </div>
-            <div class="section four" id="section4">
+            <div class="section four" id="section4"><br>
                 <h2>XGBoost</h2>
-                <img src="static/machine_learning_images/XGBoost/xgb_cm.png" alt="Confusion Matrix" style="float: right; margin-right: 15px;">
+                <p style="text-align:left">The accuracy score for the XGBoost model was 88.3%, as shown below.</p>
+                <img src="static/machine_learning_images/XGBoost/XGB_accuracy_CM.png" alt="Confusion Matrix" style="float: center; margin-bottom: 15px; margin-top: 15px;">
             </div>
-            <div class="section five" id="section5">
+            <div class="section five" id="section5"><br>
                 <h2>Naive Bayes</h2>
-                <img src="static/machine_learning_images/Naive_Bayes/nb_cm.png" alt="Confusion Matrix" style="float: right; margin-right: 15px;">
+                <p style="text-align:left">The accuracy score for the Naive Bayes model was 62.5%, as shown below.</p>
+                <img src="static/machine_learning_images/Naive_Bayes/NB_accuracy_CM.png" alt="Confusion Matrix" style="float: center; margin-bottom: 15px; margin-top: 15px;">
+            </div>
+            <div class="section six" id="section6"><br>
+                <h2>Hyperparameter Tuning</h2>
+                <p style="text-align:left">We used hyperparameter tuning on all five models. Below we can see the accuracy score of all the models. The Logistic Regression model performed the best out of all models.</p>
+                <img src="static/machine_learning_images/HP_Tuning/HP_results.png" alt="HP Tuning" style="float: center; margin-bottom: 15px; margin-top: 15px;">
+                <img src="static/machine_learning_images/HP_Tuning/LR_HP_tuning.png" alt="LR Tuning" style="float: center; margin-bottom: 15px; margin-top: 15px;">
             </div>
         </body>
 
