--- a/Web/home.html
+++ b/Web/home.html
@@ -77,10 +77,10 @@
                             <li>Number of Companies Worked</li>
                             <li>Overtime: Overtime worked (yes)</li>
                             <li>Distance from home: Miles living from workplace</li>
-                            <li>Business Travel Frequency: How often does an employee travel for work (non-travel, travel frequently, travel rarely)</li>
+                            <li>Business Travel Frequency: How often does an employee travel for work? Frequent</li>
                             <li>Job Role: Human Resources</li>
                             <li>Job Role: Lab Technician</li>
-                            <li>Martial Status: Single (Yes/No)</li>
+                            <li>Martial Status: Single</li>
                             <li>Education Field: Technical Degree</li>
                         </ul>
                     </div>
