--- a/Web/group.html
+++ b/Web/group.html
@@ -35,6 +35,7 @@
                 <a href="#section5" class="btn">Reily Thompson</a>
             </div>
             <div class="section one" id="section1">
+                <img src="static/group_images/Erik.jpeg" alt="Confusion Matrix" width="270" height="270" style="float: right; margin-bottom: 15px; margin-top: 15px;">
                 <h2>Erik Svoboda</h2>
                 <p style="text-align:left"> Project Role: <br>
                     - Exploratory data analysis <br>
@@ -42,11 +43,15 @@
                     - HTML Creation</p>
             </div>
             <div class="section two" id="section2">
+                <img src="static/group_images/Priya.jpeg" alt="Confusion Matrix" width="270" height="270" style="float: right; margin-bottom: 15px; margin-top: 15px;">
                 <h2>Priya McNamara</h2>
                 <p style="text-align:left"> Project Role: <br>
-                    - HTML</p>
+                    - HTML<br>
+                    - Tableau Visualization
+                </p>
             </div>
             <div class="section three" id="section3">
+                <img src="static/group_images/MeLea.jpeg" alt="Confusion Matrix" width="270" height="270" style="float: right; margin-bottom: 15px; margin-top: 15px;">
                 <h2>MeLea Hetrick</h2>
                 <p style="text-align:left"> Project Role: <br>
                     - Exploratory data analysis<br>
@@ -54,6 +59,7 @@
                     - Machine Learning</p>
             </div>
             <div class="section four" id="section4">
+                <img src="static/group_images/Ron.jpeg" alt="Confusion Matrix" width="270" height="270" style="float: right; margin-bottom: 15px; margin-top: 15px;">
                 <h2>Ron H</h2>
                 <p style="text-align:left"> Project Role: <br>
                     - Exploratory data analysis<br>
@@ -62,8 +68,11 @@
                     - Machine Learning</p>
             </div>
             <div class="section five" id="section5">
+                <img src="static/group_images/Reily.jpeg" alt="Confusion Matrix" width="270" height="270" style="float: right; margin-bottom: 15px; margin-top: 15px;">
                 <h2>Reily Thompson</h2>
                 <p style="text-align:left"> Project Role: <br>
+                    - Powerpoint<br>
+                    - Tableau Visualization
             </div>
         </body>
                  </div>
