--- a/Web/home.html
+++ b/Web/home.html
@@ -69,19 +69,19 @@
                     <!-- Article Paragraph -->
                     <div class="col-md-8">
                         <p>
-                            After evaluating all five machine learning models the Logistical Regression model performed the best with an accuracy of 89.8%. We used hyperparameter tuning on all the models, however this did not change the results in a significant manner. Due to the number of options that can be exercised in hyperparameter tuning we are leaving this open for further research in the future. We've identified the following 10 features as having the greatest impact to employee attrition. Features are listed in order of importance:<br>
+                            After evaluating all five machine learning models the Logistical Regression model performed the best with an accuracy of 89.8%. We used hyperparameter tuning on all the models, however this did not change the results in a significant manner. Due to the number of options that can be exercised in hyperparameter tuning we are leaving this open for further research in the future. With these features identified, companies can begin to address the employees with the highest risk of attrition. Company initiative such as team surveys, to gather tertiary information based on these features can be conducted. From these sureveys companies can learn to address these high risk employees and reduce attrition rates. We've identified the following 10 features as having the greatest impact to employee attrition. Features are listed in order of importance:<br>
                         </p>
                         <ul>
-                            <li>Years at Company: Duration of how long the employee has worked at the company</li>
-                            <li>Years Since Last Promotion</li>
-                            <li>Number of Companies Worked</li>
-                            <li>Overtime: Overtime worked (yes)</li>
-                            <li>Distance from home: Miles living from workplace</li>
-                            <li>Business Travel Frequency: How often does an employee travel for work? Frequent</li>
-                            <li>Job Role: Human Resources</li>
-                            <li>Job Role: Lab Technician</li>
-                            <li>Martial Status: Single</li>
-                            <li>Education Field: Technical Degree</li>
+                            <li>Years in Current Role</li>
+                            <li>Years at Company</li>
+                            <li>Years since last Promotion</li>
+                            <li>Environment Satisfaction</li>
+                            <li>Years with current manager</li>
+                            <li>Number of companies worked</li>
+                            <li>Job Involvement</li>
+                            <li>Total working years</li>
+                            <li>Over time: No</li>
+                            <li>Over time: Yes</li>
                         </ul>
                     </div>
                 </div>
